--- a/card.css
+++ b/card.css
@@ -17,7 +17,7 @@
 
     background-size:50vh,70vh;
 
-    box-shadow:0px 0px 20px red;
+    box-shadow:0px 0px 20px rgb(237, 216, 216);
 
     transform:rotate(5deg);
     top: 0px;
@@ -36,7 +36,7 @@ display:block;
 
 border-radius:50%;
 
-box-shadow: 0 4px 15px 0 rgb(247, 88, 88);
+box-shadow: 0 4px 15px 0 rgb(215, 192, 192);
 
     width:50px;
 
